<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group_lang">
        <item
            android:id="@+id/menu_lang_fr"
            android:title="@string/menu_lang_fr" />
        <item
            android:id="@+id/menu_lang_en"
            android:title="@string/menu_lang_en" />
    </group>

    <!-- Nouveau groupe pour les autres options -->
    <group android:id="@+id/group_options">
        <!-- Option Notifications -->
        <item
            android:id="@+id/menu_notifications"
            android:title="@string/menu_notifications" />

        <!-- Option Réservations -->
        <item
            android:id="@+id/menu_reservations"
            android:title="@string/menu_reservations" />

        <!-- Option Logout -->
        <item
            android:id="@+id/menu_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>
